[tool.poetry]
name = "project7"
version = "0.1.0"
description = ""
authors = ["Sergei Kalinichenko <ssk98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mypy = "^1.13.0"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
